<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    tools:context=".LoginPage">

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_40sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingStart="30dp"
        android:gravity="center_horizontal"
        android:paddingEnd="30dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:src="@drawable/logo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="5dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/baseline_email_24"
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            app:boxStrokeColor="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconTint="@color/white"
            app:endIconTint="@color/white"
            android:layout_height="@dimen/_45sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/baseline_vpn_key_24"
            android:layout_width="match_parent"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/endColor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconTint="@color/white"
            app:endIconTint="@color/white"
            app:passwordToggleTint="@color/white"
            android:layout_height="@dimen/_45sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passET"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/white"
                android:fontFamily="@font/comfortaa"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/forgotPasswordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password?"
                android:textColor="#BC5D5D"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/comfortaa"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/login"
            app:icon="@drawable/baseline_login_24"
            app:iconGravity="textStart"
            app:iconTint="@color/white"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            app:cornerRadius="@dimen/_5sdp"
            app:strokeColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:fontFamily="@font/comfortaa"/>

            <TextView
                android:id="@+id/signUpBtn"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/white"
                android:fontFamily="@font/comfortaa"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>